--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
-    "next-connect": "^0.13.0",
+    "next-auth": "^4.22.1",
+    "next-connect": "^1.0.0-next.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
