--- a/.base.env
+++ b/.base.env
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://<usr>:<pass>@<host>:<ip>/<db>"
+
+# NextAuth
+NEXTAUTH_SECRET=<nextauth-secret>
+
+# Providers
+GOOGLE_CLIENT_ID=<google-client-id>
+GOOGLE_CLIENT_SECRET=<google-client-secret>
