--- a/.base.env
+++ b/.base.env
@@ -12,3 +12,11 @@ NEXTAUTH_SECRET=<nextauth-secret>
 # Providers
 GOOGLE_CLIENT_ID=<google-client-id>
 GOOGLE_CLIENT_SECRET=<google-client-secret>
+
+# Nextjs api url. this is necessary for the server components to work
+SERVER_URL=<server-url>
+PORT=<server-port>
+
+# Main api url
+NEXT_PUBLIC_API_URL=<api-url>
+NEXT_PUBLIC_TITLE=Gnosis
